<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    tools:context="com.simpleNotes.simplenotelist.screens.TaskDescriptionFragment.TaskDescriptionFragment">


    <EditText
        android:id="@+id/et_task_desc_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/addTask_et_title_hint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@android:color/black"
        android:textColorHint="@color/hint_color"
        app:backgroundTint="@color/hint_color"
        app:layout_constraintBottom_toTopOf="@+id/task_desc_done_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />


<!--    <Spinner-->
<!--        android:id="@+id/spinner_task_desc_priorities"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:layout_marginEnd="8dp"-->
<!--        android:layout_marginBottom="16dp"-->
<!--        android:backgroundTint="@android:color/black"-->
<!--        android:ems="10"-->
<!--        android:entries="@array/task_priorities"-->

<!--        android:hint="@string/addTask_et_task_hint"-->
<!--        android:inputType="textPersonName"-->
<!--        android:minHeight="48dp"-->
<!--        android:popupBackground="@color/white"-->
<!--        android:theme="@style/Spinner"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/et_task_desc_title"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

    <ImageButton
        android:id="@+id/task_desc_back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/transparent"
        android:padding="8dp"
        android:src="@drawable/ic_back_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription,MissingConstraints,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/task_desc_done_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/transparent"
        android:text="@string/addTask_done_btn_text"
        android:textColor="@color/active_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="ContentDescription,MissingConstraints,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btn_task_desc_set_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"

        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/addTask_rounded_button_background_tint"
        android:text="@string/addTask_btn_reminder"
        android:textColor="@android:color/black"
        app:cornerRadius="24dp"
        app:layout_constraintBottom_toTopOf="@+id/et_task_desc_title"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>