<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"

    tools:context="com.simpleNotes.simplenotelist.screens.DateTimePickerDialog.DateTimePickerDialogFragment" >

    <TextView
        android:id="@+id/picker_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/timePicker_dialogue_title"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:gravity="center"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/picker_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
    </TextView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/picker_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/cancel_selecting_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <NumberPicker
            android:id="@+id/date_picker"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="4dp"
            android:theme="@style/AppTheme.Picker"
            app:backgroundTint="@color/hint_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/time_picker"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TimePicker
            android:id="@+id/time_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:timePickerMode="spinner"
            android:theme="@style/AppTheme.Picker"
            android:scrollbars = "none"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/date_picker"
            app:layout_constraintTop_toTopOf="parent">

        </TimePicker>

    </androidx.constraintlayout.widget.ConstraintLayout>

<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
<!--        android:id="@+id/date_time_picker_res_buttons"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        android:orientation="horizontal">-->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/select_time_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/date_time_picker_dialog_select_button"
        app:cornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TextContrastCheck">

    </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_selecting_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/date_time_picker_dialog_cancel_button"
            android:textColor="@color/transparent_button_grey_corner"
            app:backgroundTint="@android:color/transparent"
            app:cornerRadius="8dp"
            app:rippleColor="#33AAAAAA"
            app:strokeColor="@color/transparent_button_grey_corner"
            app:strokeWidth="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        </com.google.android.material.button.MaterialButton>
<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->


</androidx.constraintlayout.widget.ConstraintLayout>